--- a/ex01.htm
+++ b/ex01.htm
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS猜數字</title>
-    <meta name="author" content="Tai">
-    <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="ex02.css">
-    <link rel="stylesheet" href="ex03.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    
-</head>
-<body>   
+    <meta name="author" content="Pat Tai" />
+    <meta name="robots" content="index, follow" />
+    <link rel="stylesheet" href="ex02.css" />
+    <link rel="stylesheet" href="ex03.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
+  </head>
+  <body>
     <div id="ball">
-        <div class="halo"></div>
-        <div class="halo"></div>
-        <div class="halo"></div>
+      <div class="halo"></div>
+      <div class="halo"></div>
+      <div class="halo"></div>
     </div>
     <div class="box01">
-    <center><h1> 請猜一個0到10的整數</h1>
-    <input id="myInput" type="text" value="">
-    <button id="myButton">送出</button>
-    <p class="bold"><a href="./index.htm" target="_top"> <i class="fas fa-home fa-2x" aria-hidden="true"></i>回首頁</a></p></center>
-</div>
+      <center>
+        <h1>請猜一個0到10的整數</h1>
+        <input id="myInput" type="text" value="" />
+        <button id="myButton">送出</button>
+        <p>
+          <a href="./index.htm" target="_top">
+            <i class="fas fa-home fa-2x" aria-hidden="true"></i> 回首頁</a>
+        </p>
+      </center>
+    </div>
     <script src="./ex01.js"></script>
     <script src="./ex03.js"></script>
-    
-</body>
+  </body>
 </html>
