--- a/ex02.htm
+++ b/ex02.htm
@@ -7,8 +7,7 @@
     <title>考反應</title>
     <link rel="stylesheet" href="ex02.css" />
     <link rel="stylesheet" href="ex03.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
   </head>
   <body>
     <div id="ball">
@@ -20,12 +19,10 @@
     <div class="box01">
       <center>
         <h1>考考您的反應!!</h1>
-        <h3>
-          反應時間:<span id="time">0 </span> 秒
-        </h3>
-        <p class="bold">
+        <h3>反應時間:<span id="time">0 </span> 秒</h3>
+        <p>
           <a href="./index.htm" target="_top">
-            <i class="fas fa-home fa-2x" aria-hidden="true"></i>回首頁</a>
+            <i class="fas fa-home fa-2x" aria-hidden="true"></i> 回首頁</a>
         </p>
       </center>
     </div>
