--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Javascript 小遊戲。"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="JS Game" />
+    <meta property="og:description" content="Javascript 小遊戲。"/>
+    <meta property="og:image" content="https://images.unsplash.com/photo-1484417894907-623942c8ee29?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80"/>
     <title>Javascript Game</title>
+    <link rel="shortcut icon" href="./img/icons8-javascript.png" type="image/x-icon"/>
     <link rel="stylesheet" href="ex03.css">
 </head>
 <body>
@@ -15,8 +21,12 @@
     </div>
     <div class="box">
         <a href="ex01.htm"><button class="btn">猜數字</button></a>
-        <a href="ex02.htm"><button class="btn">考反應</button></a>
+        <a href="ex02.htm"><button class="btn">考反應</button></a>      
     </div>
+
+    <footer class="footer">
+        <p>made by <a href="#">Pat Tai</a> </p>
+      </footer>
     <script src="ex03.js"></script>
 </body>
 </html>
